--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,12 @@ dependencies:
   gap: ^3.0.1
   flutter_svg: ^2.0.10+1
 
+  #API
+  dio: ^5.4.3+1
+  freezed_annotation: ^2.4.1
+  json_annotation: ^4.9.0
+  envied: ^0.5.4+1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -53,6 +59,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
+  build_runner: ^2.4.9
+  freezed: ^2.5.2
+  json_serializable: ^6.8.0
+  envied_generator: ^0.5.4+1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
