--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,12 +42,27 @@ dependencies:
   size_setter: ^1.0.9
   gap: ^3.0.1
   flutter_svg: ^2.0.10+1
+  fluttertoast: ^8.2.5
+
+  #state
+  flutter_bloc: ^8.1.5
+  equatable: ^2.0.5
+
+  #DI
+  get_it: ^7.7.0
+
+  #Log
+  logger: ^2.2.0
 
   #API
   dio: ^5.4.3+1
   freezed_annotation: ^2.4.1
   json_annotation: ^4.9.0
   envied: ^0.5.4+1
+
+  #Device
+  device_info_plus: ^10.1.0
+  get_ip_address: ^0.0.6
 
 dev_dependencies:
   flutter_test:
