--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,8 @@ dependencies:
 
   #Splash
   flutter_native_splash: ^2.4.0
+  firebase_core: ^2.31.0
+  firebase_crashlytics: ^3.5.5
 
 dev_dependencies:
   flutter_test:
