--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   flutter_native_splash: ^2.4.0
   firebase_core: ^2.31.0
   firebase_crashlytics: ^3.5.5
+  firebase_analytics: ^10.10.5
 
 dev_dependencies:
   flutter_test:
