--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,9 @@ dependencies:
   firebase_crashlytics: ^3.5.5
   firebase_analytics: ^10.10.5
 
+  #social login
+  kakao_flutter_sdk_user: ^1.9.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
