--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -39,6 +39,15 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        <meta-data
+           android:name="com.naver.sdk.clientId"
+           android:value="@string/BjYTFFsk_z4EYCfyt9TH" />
+        <meta-data
+           android:name="com.naver.sdk.clientSecret"
+           android:value="@string/3ixRkEYUrv" />
+        <meta-data
+           android:name="com.naver.sdk.clientName"
+           android:value="@string/tikichatApp" />
     </application>
     <!-- Required to query activities that can process text, see:
          https://developer.android.com/training/package-visibility?hl=en and
