--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -22,13 +22,6 @@
 	<string>$(FLUTTER_BUILD_NAME)</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
-	<key>LSApplicationQueriesSchemes</key>
-	<array>
-		<!-- 카카오톡으로 로그인 -->
-		<string>kakaokompassauth</string>
-		<!-- 카카오톡 공유 -->
-		<string>kakaolink</string>
-	</array>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
@@ -37,13 +30,43 @@
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>kakaof010e2cf91863a1122f3ef2526ba2716</string>
+				<string>tikichatApp</string>
 			</array>
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>kakaokompassauth</string>
+		<string>kakaolink</string>
+		<string>naversearchapp</string>
+       <string>naversearchthirdlogin</string>
+	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+		<key>NSExceptionDomains</key>
+		<dict>
+			<key>naver.com</key>
+			<dict>
+				<key>NSExceptionRequiresForwardSecrecy</key>
+				<false/>
+				<key>NSIncludesSubdomains</key>
+				<true/>
+			</dict>
+			<key>naver.net</key>
+			<dict>
+				<key>NSExceptionRequiresForwardSecrecy</key>
+				<false/>
+				<key>NSIncludesSubdomains</key>
+				<true/>
+			</dict>
+		</dict>
+	</dict>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
@@ -65,5 +88,13 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>naverConsumerKey</key>
+	<string>BjYTFFsk_z4EYCfyt9TH</string>
+	<key>naverConsumerSecret</key>
+	<string>3ixRkEYUrv</string>
+	<key>naverServiceAppName</key>
+	<string>tikichatApp</string>
+	<key>naverServiceAppUrlScheme</key>
+	<string>tikichatApp</string>
 </dict>
 </plist>
