--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -31,6 +31,7 @@
 			<array>
 				<string>kakaof010e2cf91863a1122f3ef2526ba2716</string>
 				<string>tikichatApp</string>
+				<string>com.googleusercontent.apps.1014559418471-hqp8k1alq5sop9gpfkicvdvnqs80c5qc</string>
 			</array>
 		</dict>
 	</array>
