--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,7 @@ dependencies:
   #social login
   kakao_flutter_sdk_user: ^1.9.2
   flutter_naver_login: ^1.8.0
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_test:
